fix: tags are now aligned properly

--- a/signup-front/src/components/atoms/Tag/style.css
+++ b/signup-front/src/components/atoms/Tag/style.css
@@ -23,6 +23,9 @@
   color: var(--w);
 }
 
-.fr-tag + .fr-tag {
-  margin-left: 1em;
+.tag-container {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 0.5em;
+  row-gap: 0.5em;
 }
